--- a/index.html
+++ b/index.html
@@ -1,82 +1,40 @@
 <!DOCTYPE html>
-<html>
-<head>
-<title>my personal details</title>
-<link rel="stylesheet" type="text/css" href="styler.css"/>
-
-</head>
-<body>
-
-<header>
-<nav>
-<div class="amos">
-<ul>
-<li><a href="web.html">HOME</a></li>
-<li><b>KIPYEGON AMOS</b></li>
-<li><b>REG NO ENC222-0130/2017</b></li>
-
-</ul>
-</div>
-</nav>
-</header>
-
-
-<h1 style="font-size:200%;color:green"><b>MY curiculum vitae</b></h1>
-
-<section class="inleft">
-
-<div class="cv">
-<p style="font-size:150%"><u><b>my personal details</u></b></p>
-<p><b>Name:</b> Kipyegon Amos</p>
-<p><b>Phone Number:</b> 0742547320</p>
-<p><b>Email:</b> kiptoamos@gmail.com</p>
-<p><p><b>County:</b> Kericho</p>
-<p><b>Date of Birth:</b> 25th June 2000</p>
-<p><b>Gender:</b> Male</p>
-<p><b>Nationality:</b> Kenya</p>
-<p><b>Religion:</b> Christian</p>
-<p><b>Marital Status:</b> Single</p>
-<p><b>Address:</b> P.O Box 21, Chesinende</p>
-<p><b>Zipped Code:</b> Chesinende, 20202</p>
-<p><b>Language Proficiency:</b> English, Kiswahili, Kipsigis</p>
-<p><b><u>PERSONAL PROFILE STATEMENT</u></b><p>
-<p>I am a motivated, determined, confident, self-disciplined, industrious and honest student. I am a good team player, able to relate well with colleagues, pay utmost attention to the authorities and perform the tasks assigned unto me under minimal supervision.
-<p><b><u>EDUCATIONAL BACKGROUND.</u></b></p>
-<p>2017-Present:  Jomo Kenyatta University of Agriculture and Technology.
-               BSc in Geospatial Information Science, 3rd year.</br>
-2013-2016: Lesirwo secondary school.
-              Mean Grade B.</br>
-2004-2012: Kamachungwa primary school.
-              Mean Score 257.<p>
-
-
-<p><b><u>KEY SKILLS AND COMPETENCE ACQUIRED WHILE STUDYING.</u></b></p>
-<p>Competence in using Remote Sensing Software’s such as ERDAS IMAGINE, SNAP. GIS softwares such as ArcMap (ArcGIS) and AutoCAD.
-Competent in programming languages such as C, C++, Python for GIS programing, Computer Packages Word, Excel, Access, Power-point.
-Surveying techniques for both vertical and horizontal controls and their associated computations.</p>
-<p><b><u>HOBBIES AND INTERESTS.</u></b></p>
-<p>Studying, Programming, Playing handball.</p>
-
-</div>
-</section>
-<section class ="inright">
-<legend>
-<fieldset>
-<p>am a geospatioal information scienties<p>
-<button><class="button"  type="button" > <a href="web.html">home button</a></button>
-</fieldset>
-</legend>
-</section>
-
-</section>
-<section class ="desc">
-<legend>
-<fieldset>
-<p>am surveyor AMOS<p>
-<button><class="button"  type="button" > <a href="web.html">home button</a></button>
-</fieldset>
-</legend>
-</section>
-
-</body>
+<html lang="en">
+  <head>
+    <title>Accessible Map</title>
+    <!-- Pointer events polyfill for old browsers, see https://caniuse.com/#feat=pointer -->
+    <script src="https://unpkg.com/elm-pep"></script>
+    <style>
+      .map {
+        width: 100%;
+        height:400px;
+      }
+      a.skiplink {
+        position: absolute;
+        clip: rect(1px, 1px, 1px, 1px);
+        padding: 0;
+        border: 0;
+        height: 1px;
+        width: 1px;
+        overflow: hidden;
+      }
+      a.skiplink:focus {
+        clip: auto;
+        height: auto;
+        width: auto;
+        background-color: #fff;
+        padding: 0.3em;
+      }
+      #map:focus {
+        outline: #4A74A8 solid 0.15em;
+      }
+    </style>
+  </head>
+  <body>
+    <a class="skiplink" href="#map">Go to map</a>
+    <div id="map" class="map" tabindex="0"></div>
+    <button id="zoom-out">Zoom out</button>
+    <button id="zoom-in">Zoom in</button>
+    <script src="main.js"></script>
+  </body>
 </html>
