--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <title>Accessible Map</title>
     <!-- Pointer events polyfill for old browsers, see https://caniuse.com/#feat=pointer -->
-    <script src="https://unpkg.com/elm-pep"></script>
+    <script src="restaurant.json"></script>
     <style>
       .map {
         width: 100%;
