--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
       function initMap() {
         map = new google.maps.Map(document.getElementById("map"), {
           center: {
-            lat: -34.397,
-            lng: 150.644
+            lat: 36.666,
+            lng: - 4
           },
           zoom: 8
         });
