--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div id="myData"></div>
     <script>
-        fetch('restaurant.json')
+        fetch('people.json')
             .then(function (response) {
                 return response.json();
             })
@@ -23,7 +23,7 @@
             var mainContainer = document.getElementById("myData");
             for (var i = 0; i < data.length; i++) {
                 var div = document.createElement("div");
-                div.innerHTML = 'Name: ' + data[i].building + ' ' + data[i].street;
+                div.innerHTML = 'Name: ' + data[i].firstName + ' ' + data[i].lastName;
                 mainContainer.appendChild(div);
             }
         }
