--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div id="myData"></div>
     <script>
-        fetch('restaurant.json')
+        fetch('restaurants.json ')
             .then(function (response) {
                 return response.json();
             })
