--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             var mainContainer = document.getElementById("myData");
             for (var i = 0; i < data.length; i++) {
                 var div = document.createElement("div");
-                div.innerHTML = 'Name: ' + data[i].name + ' ' + data[i].street;
+                div.innerHTML =data[i].name + ' ' + data[i].street , data[i].building ;
                 mainContainer.appendChild(div);
             }
         }
