--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <h1>KIPYEGON AMOS </h1>
     <div id="myData"></div>
     <script>
-        fetch('restaurants.json ')
+        fetch('people.json ')
             .then(function (response) {
                 return response.json();
             })
@@ -23,8 +23,8 @@
         function appendData(data) {
             var mainContainer = document.getElementById("myData");
             for (var i = 0; i < data.length; i++) {
-                var div = document.createElement("div");
-                div.innerHTML =data[i]. address.name + ' ' + data[i]. address.street , data[i]. address.building ;
+                   var div = document.createElement("div");
+                div.innerHTML = 'Name: ' + data[i].firstName + ' ' + data[i].lastName;
                 mainContainer.appendChild(div);
             }
         }
