--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>JSON Test</title>
 </head>
 <body>
+    <h1>kipyegon Amos </h1>
     <div id="myData"></div>
     <script>
         fetch('people.json')
