--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             var mainContainer = document.getElementById("myData");
             for (var i = 0; i < data.length; i++) {
                 var div = document.createElement("div");
-                div.innerHTML = 'Street : ' + data[i].address . street+'''NAME:'+data[i]. name ;
+                div.innerHTML = 'Street : ' + data[i].address . street+''+'NAME:'+data[i]. name ;
                 mainContainer.appendChild(div);
             }
         }
