--- a/index.html
+++ b/index.html
@@ -29,5 +29,14 @@
             }
         }
     </script>
+<footer>
+    <p>KIPYEGON AMOS ENC222-0130/2017</p>
+    <p>&copy copyright amos</p>
+    <script language ="JavaScript ">
+    function popup() {
+   document.write ("kipyegon Amos ENC222-0130/2017"} 
+    </script >
+                   <input type =" submit "onclick =" popup() "value =" JavaScript pop up ">
+    </footer>
 </body>
 </html>
