--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
     <p>KIPYEGON AMOS ENC222-0130/2017</p>
     <p>&copy copyright amos</p>
     <script language ="JavaScript ">
-        <! - - 
+       
     function popup() {
-   document.write ("kipyegon Amos ENC222-0130/2017") } 
-        //-->
+   alert  ("kipyegon Amos ENC222-0130/2017") } 
+        
     </script >
                    <input type =" submit "onclick =" popup() "value =" JavaScript pop up ">
     </footer>
