--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
    alert  ("kipyegon Amos ENC222-0130/2017") } 
         
     </script >
-                   <input type =" submit "onclick =" popup() "value =" JavaScript pop up ">
+                   <input type =" button "onclick =" popup() "value =" JavaScript pop up ">
     </footer>
 </body>
 </html>
