--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>kipyegon Amos </title>
 </head>
 <body style ="background:blue">
-    <div id="header" style ="background :blue;height :80px; position :absolute ;top :1%;width :100 %">
+    <div id="header" style ="background :red;height :80px; position :absolute ;top :1%;width :100 %">
     <h1>kipyegon Amos </h1>
     <div id="myData"></div>
     <script>
