--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 </head>
 <body style ="background:blue">
     <div id="header" style ="background :red;height :80px; position :absolute ;top :1%;width :100 %">
+        <p style ="position :absolute ;top:1%">display </p>
+        <p> </p>
     <h1>kipyegon Amos </h1>
     <div id="myData"></div>
     <script>
