--- a/index.html
+++ b/index.html
@@ -3,20 +3,20 @@
 <head>
 	<meta charset="utf-8">
 	<title>Leaflet Map</title>
-    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.0.3/dist/leaflet.css" />
+	<!-- External Stylesheets -->
+        <link rel="stylesheet" href="https://unpkg.com/leaflet@1.0.3/dist/leaflet.css" />
 </head>
 <body>
     <!-- Our web map and content will go here -->
-    <!-- Add the Leaflet JavaScript library -->
+	<!-- Add the Leaflet JavaScript library -->
 <script src="https://unpkg.com/leaflet@1.0.3/dist/leaflet.js"></script>
-    <div id="map" style="width: 705px; height: 375px"></div>
-    
-    <script>
+	<div id="map" style="width: 705px; height: 375px"></div>
+	
+	<script>
     // Create variable to hold map element, give initial settings to map
     var map = L.map('map',{ center: [42.362432, -71.086086], zoom: 14});
-        / Add OpenStreetMap tile layer to map element
+		// Add OpenStreetMap tile layer to map element
 L.tileLayer('http://{s}.tile.osm.org/{z}/{x}/{y}.png', { attribution: '© OpenStreetMap' }).addTo(map);
-
 </script>
-    </body >
+</body>
 </html>
