--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<title>Leaflet Map</title>
+	<title>kipyegon Amos ENC222-0130/2017 </title>
 	<!-- External Stylesheets -->
         <link rel="stylesheet" href="https://unpkg.com/leaflet@1.0.3/dist/leaflet.css" />
 </head>
@@ -10,7 +10,7 @@
     <!-- Our web map and content will go here -->
 	<!-- Add the Leaflet JavaScript library -->
 <script src="https://unpkg.com/leaflet@1.0.3/dist/leaflet.js"></script>
-	<div id="map" style="width: 705px; height: 375px"></div>
+	<div id="map" style="width: 100%; height: 375px"></div>
 	
 	<script>
     // Create variable to hold map element, give initial settings to map
