--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ L.tileLayer('http://{s}.tile.osm.org/{z}/{x}/{y}.png', { attribution: '© OpenSt
 	// load GeoJSON from an external file
 $.getJSON("restaurants-1.json",function(data){
     // add GeoJSON layer to the map once the file is loaded
-    L.Json(data).addTo(map);
+    L.json(data).addTo(map);
 });
 </script>
 	
