--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!-- Our web map and content will go here -->
 	<!-- Add the Leaflet JavaScript library -->
 <script src="https://unpkg.com/leaflet@1.0.3/dist/leaflet.js"></script>
-	<div id="map" style="width: 100%; height: 80%"></div>
+	<div id="map" style="width: 100%; height: 380px%"></div>
 	
 	<script>
     // Create variable to hold map element, give initial settings to map
