--- a/index.html
+++ b/index.html
@@ -2,31 +2,24 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<title>kipyegon Amos ENC222-0130/2017 </title>
+	<title>Leaflet Map</title>
 	<!-- External Stylesheets -->
-        <link rel="stylesheet" href="https://unpkg.com/leaflet@1.0.3/dist/leaflet.css" />
-
+<link rel="stylesheet" href="https://unpkg.com/leaflet@1.0.3/dist/leaflet.css" />
 </head>
-<body style ="background :blue ">
+<body>
     <!-- Our web map and content will go here -->
-	<!-- Add the Leaflet JavaScript library -->
+<!-- Add the Leaflet JavaScript library -->
 <script src="https://unpkg.com/leaflet@1.0.3/dist/leaflet.js"></script>
-	<div id="map" style="width: 100%; height: 380px%"></div>
-	
+	<div id="map" style="width: 705px; height: 375px"></div>
 	<script>
     // Create variable to hold map element, give initial settings to map
-    var map = L.map('map',{ center: [39.6666667, -4.05], zoom: 14});
+    var map = L.map('map',{ center: [39.6, -4.5], zoom: 14});
+		
 		// Add OpenStreetMap tile layer to map element
 L.tileLayer('http://{s}.tile.osm.org/{z}/{x}/{y}.png', { attribution: '© OpenStreetMap' }).addTo(map);
-		
-		
-		  <!-- Web Map Scripts are here -->
-	
 </script>
 	
-	        <!-- HTML Page Elements are here -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-      
+	
       <footer>
     <p>KIPYEGON AMOS ENC222-0130/2017</p>
     <p>&copy copyright amos</p>
