--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!-- Our web map and content will go here -->
 <!-- Add the Leaflet JavaScript library -->
 <script src="https://unpkg.com/leaflet@1.0.3/dist/leaflet.js"></script>
-	<div id="map" style="width: 705px; height: 375px"></div>
+	<div id="map" style="width: 100%; height: 375px"></div>
 	<script>
     // Create variable to hold map element, give initial settings to map
     var map = L.map('map',{ center: [39.6, -4.5], zoom: 14});
