--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<!-- External Stylesheets -->
 <link rel="stylesheet" href="https://unpkg.com/leaflet@1.0.3/dist/leaflet.css" />
 </head>
-<body>
+<body style ="background :skyblue">
     <!-- Our web map and content will go here -->
 <!-- Add the Leaflet JavaScript library -->
 <script src="https://unpkg.com/leaflet@1.0.3/dist/leaflet.js"></script>
