--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
     <!-- Our web map and content will go here -->
 <!-- Add the Leaflet JavaScript library -->
 <script src="https://unpkg.com/leaflet@1.0.3/dist/leaflet.js"></script>
+
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+
 	<div id="map" style="width: 100%; height: 375px"></div>
 	<script>
     // Create variable to hold map element, give initial settings to map
@@ -17,6 +21,11 @@
 		
 		// Add OpenStreetMap tile layer to map element
 L.tileLayer('http://{s}.tile.osm.org/{z}/{x}/{y}.png', { attribution: '© OpenStreetMap' }).addTo(map);
+		$.getJSON("restaurants-1.json",function(data){
+    // add GeoJSON layer to the map once the file is loaded
+    L.geoJson(data).addTo(map);
+});
+		
 </script>
 	
 	
