--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@ L.tileLayer('http://{s}.tile.osm.org/{z}/{x}/{y}.png', { attribution: '© OpenSt
    alert  ("kipyegon Amos ENC222-0130/2017") } 
         
     </script >
-                   <input type =" button "onclick =" popup() "value =" JavaScript pop up ">
+                   <button  type =" button "onclick =" popup() "value =" JavaScript pop up ">
     </footer>
       
 </body>
