--- a/index.html
+++ b/index.html
@@ -2,22 +2,7 @@
 <html lang="en">
 <style>
 *moses
-{margin:0px;padding:0px} 
-body{background:skyblue} 
-#header{width:100%;height:50px; background:green;box-shadow:2px 4px 6px:green;position:absolute;top:1%}
-#navbar{width:100%;height:50px;float:right;position:absolute;top:0%}
-#navbar>li{width:40%;list-style:none;float:left;border-right:1px solid gray;border-left:1px solid gray}
-li>a{display:block;color:white;line-height:50px;
-text-align:center;font-family:cursive;font-size:20px;text-decoration:none}
-li>a:hover,
-li>a:focus{background:black;color:red;}
 
-@media screen and (max-width:1060px){
-#navbar{width:800px;height:60px}
-#navbar>li{width:250px}
-
-#myData{position:absolute;top:50%}
-@media screen and (max-width:1060px)
  h3 {
             text-align: center;
         }
@@ -47,7 +32,7 @@ li>a:focus{background:black;color:red;}
 
 <link rel="style sheet"type="moses">
  <meta charset="UTF-8">
-    <title> RESTAURANTS MAMP_KIPYEGON AMOS</title>
+    <title> Kenya restaurants </title>
     <!--inport leaflet styling-->
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.0.3/dist/leaflet.css">
     <!--Import jquery library-->
@@ -58,20 +43,6 @@ li>a:focus{background:black;color:red;}
 	
 </head>
 <body>
-
-
-<div id="header">
-
-</div>
-<ul id="navbar">
-<li><a href ="AM.html">DISPLAY CUISINE</a></li>
-<li >KIPYEGON AMOS WEP MAPPING</li>
-
-
-
-
-
-</ul>
 
 
     <!--map  element-->
@@ -1915,8 +1886,8 @@ li>a:focus{background:black;color:red;}
 
    
 	 <footer style="float:bottom;position:absolute;bottom:1%;right:5%">
-<p>KIPYEGON AMOS<p>
-<p>ENC222-0130/2017</p>
+<p>Ann wachera <p>
+<p>ENC222-/2017</p>
 </footer>
 <p style="float:bottom;position:absolute;bottom:3%;right:50%;color:red">CLICK DISPLAY CUISINETO SHOW IN THE LIST FORM</p>
 <p style="float:bottom;position:absolute;bottom:1%;right:50%">&copy copyright amos</p>
