--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 	
 </head>
 <body>
-<h3>Ann map showing restaurants in Kenya </h3>
+<h3> map showing restaurants in Kenya </h3>
 
 
     <!--map  element-->
@@ -1887,7 +1887,7 @@
 
    
 	 <footer style="float:bottom;position:absolute;bottom:1%;right:5%">
-<p>Ann wachera <p>
+<p>Amos <p>
 <p>ENC222-/2017</p>
 </footer>
 
