--- a/index.html
+++ b/index.html
@@ -1887,7 +1887,7 @@
 
    
 	 <footer style="float:bottom;position:absolute;bottom:1%;right:5%">
-<p>Amos <p>
+<p>KIPYEGON Amos <p>
 <p>ENC222-0130/2017</p>
 </footer>
 
