--- a/index.html
+++ b/index.html
@@ -1888,7 +1888,7 @@
    
 	 <footer style="float:bottom;position:absolute;bottom:1%;right:5%">
 <p>KIPYEGON Amos <p>
-<p>ENC222-0130/2017</p>
+<p>kipyegon Amos     ENC222-0130/2017</p>
 </footer>
 
 
