--- a/index.html
+++ b/index.html
@@ -1886,9 +1886,9 @@
     </script>
 
    
-	 <footer style="float:bottom;position:absolute;bottom:1%;right:20%">
+	 <footer style="float:bottom;position:absolute;bottom:1%;right:10%">
 <p>KIPYEGON Amos <p>
-<p>kipyegon Amos     ENC222-0130/2017</p>
+<p>ENC222-0130/2017</p>
 </footer>
 
 
