--- a/index.html
+++ b/index.html
@@ -1887,8 +1887,8 @@
 
    
 	 <footer style="float:bottom;position:absolute;bottom:1%;right:10%">
-<p>KIPYEGON Amos <p>
-<p>ENC222-0130/2017</p>
+
+<p>KIPYEGON AMOS ENC222-0130/2017</p>
 </footer>
 
 
