--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 	
 </head>
 <body style ="background:skyblue">
-<h3> map showing restaurants in Kenya </h3>
+<h3> pulling data from mongodp     map showing restaurants in Kenya </h3>
 
 
     <!--map  element-->
