--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         });
         //base map
         L.tileLayer("http://{s}.tile.osm.org/{z}/{x}/{y}.png", {
-            attribution: "© OpenStreetMap  KIPYEGON AMOS  ENC222-0130/2017  mentor:Mr mwaura "
+            attribution: "© OpenStreetMap  KIPYEGON AMOS  0742547320 "
         }).addTo(map);
 
         //data
