--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
             font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
             font-style: italic;
         }
+	.home{color:red}
 }
 </style>
 
@@ -43,6 +44,7 @@
 	
 </head>
 <body style ="background:skyblue">
+<div ID=home><a href= "">HOME</a><div>
 <h3>displaying restaurants</h3>
 
 
