--- a/index.html
+++ b/index.html
@@ -1890,7 +1890,7 @@
    
 	 <footer style="float:bottom;position:absolute;bottom:1%;right:10%">
 
-<p>KIPYEGON AMOS ENC222-0130/2017</p>
+<p>KIPYEGON AMOS kiptoamos@gmail.com</p>
 </footer>
 
 
