--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
             font-style: italic;
         }
-	.home{color:red}
+	.home{color:'blue';decoration:'none'}
 }
 </style>
 
@@ -44,7 +44,7 @@
 	
 </head>
 <body style ="background:skyblue">
-<div ID=home><a href= "">HOME</a><div>
+<div ID=home><a href= "https://kipyegon2000.github.io/assignment-1/">HOME</a><div>
 <h3>displaying restaurants</h3>
 
 
