--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
             font-style: italic;
         }
-	.home{color:'blue';decoration:'none'}
+	.home{color:'blue';decoration:'none';position:'left'}
 }
 </style>
 
